[package]
name = "wei-run"
version = "0.2.2"
edition = "2021"
description = "wei process"
documentation = "https://github.com/zuiyue-com/wei-process"
homepage = "https://github.com/zuiyue-com/wei-process"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
wei-log = "0.2.5"
winapi = { version = "0.3", features = ["winbase"] }
