[package]
name = "wei-run"
version = "0.2.6"
edition = "2021"
description = "wei run"
documentation = "https://github.com/zuiyue-com/wei-run"
homepage = "https://github.com/zuiyue-com/wei-run"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.13"
wei-log = "0.2.9"
winapi = { version = "0.3", features = ["winbase"] }
